skin2 issues
A few assumptions were made based on the way skins work on 1.0x, as opposed to 0.9x or earlier. These assumptions lead to the creation of a skin that was recently submitted, called "raptor", intended for Goldeneye. Tho maybe erronious, the following appears to be so:
a) The layout order defined in the "theme.xml" remains key.
b) Startup appears to always call a default window/layout w default size regardless of which window exitted previously (not the case w skins prior to Goldeneye). In this skin, the 2nd layout (screen/maxl) is the default on opening, by design.
c) Switching between 2 available layouts/vouts, exists, tho perhaps un-intentensional.
VLC versions 1.0.0-rc1, 1.0.0-rc2, git, etc. compiled on 'nix O/S=linux, latest ubuntu/derivatives, debian-squeeze, arch-linux latest raptor skin= 2 vouts/2 layouts in main window
-
Usually won't zoom w/o segfaulting, crashes on zoom attempt, any distro, most of the time. Starts up w correct default ar, fullscreen/leave o.k. switches main layouts seamlessly, but any zooming fails. Zoom works perfectly on any 0.9x version, any native ar from 1/4 - 2/1, in the "primary" vout (screen) only (seamless switching doesn't work on 0.9x).
-
After zoom failure (segfault), skin will likely work on the next startup. On hangs/feezes, next startup iffy on play, forcing a "--reset-config" or cycling winsows/layouts usually corrects, but not always.
-
a modded raptor-skin (single vout/1 layout main), and other released skins, will zoom in 1.0x, but does so with top/bottom, black, horizontal, 5/8", bars on video display, as if not recognizing the vertical hieght dimension. Perfect zooms on 0.9x.
-
visualizations, will usually autoresize to default on either vout, but again, zoom usually fails. When it does work, appears secondary vout uses the wrong layout.
-
dvd-disk-play may hang/freeze on play, will always crash on "stop", but isos' or TS folders will ususally play/stop fine.
VLC versions 1.0.0-rc1, 1.0.0-rc2 latest nightlies O/S=winXP Pro SP1a, skins2 testing only raptor skin, raptor-modified as above and a few other released skins
-
Startup rarely hangs and zooms w/o failure, but still produces black, horizontal, top/bottom, 5/8" bars mentioned above. Switches layouts seamlessly during video-play, but zooming the secondary (combo) layout looks like trying to resize to the wrong layout, maybe a serious drawback for dual vouts. Zooms smartly on 0.9x versions, no black bars on primary (screen).
-
Modified raptor-skin or other released skins zoom but show the same black horizontal bars as above. The same skins zoom smartly on 0.9x.
-
If stopped after zooming @ whaterver scale, then play again, resizes correctly to default 1/1 size, no black bars.
-
Vizualizations fail occasionally, but when working, will work similarly to above.
-
Dvd-play crashes on "stop", not tried iso or TS folders, zooms and switches layouts as above in primary layout, secondary layout zooms incorrectly.
-
always throws a "VLC crash reporting" dialog on the following startup, not so w default qt-gui.
-Have output recorded to text-files on 'nix if needed, a few errors/warnings appear significant as far as troubleshooting. Unsure how to attach them here, if possibe, nowhere else to post them.