skins2: correct crashes when using zoom and multiple video tags

Fixes #2821

Signed-off-by: Rémi Denis-Courmont <remi@remlab.net>